force-app/main/default/objects/Product_Sales_Budget__c/Product_Sales_Budget__c.object-meta.xml
<CustomObject>
    <label>Product Sales &amp; Budget</label>
    <nameField>
        <displayFormat>PSB-{0}</displayFormat>
        <label>PSB #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Sales &amp; Budgets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>