force-app/main/default/objects/Product_Sales_Budget__c/fields/Budgeted_Volume__c.field-meta.xml
<CustomField>
    <fullName>Budgeted_Volume__c</fullName>
    <label>Budgeted Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>