force-app/main/default/objects/Product_Sales_Budget__c/fields/Rolling_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Rolling_Forecast__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Rolling Forecast</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>