force-app/main/default/objects/Product_Sales_Budget__c/fields/Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>Sale_Price__c</fullName>
    <label>Sale Price</label>
    <summarizedField>Sale_Line_Item__c.Total_Sales_Price__c</summarizedField>
    <summaryForeignKey>Sale_Line_Item__c.Sale__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>