force-app/main/default/objects/Product_Sales_Budget__c/fields/Total_Volume__c.field-meta.xml
<CustomField>
    <fullName>Total_Volume__c</fullName>
    <label>Total Volume</label>
    <summarizedField>Sale_Line_Item__c.Volume__c</summarizedField>
    <summaryForeignKey>Sale_Line_Item__c.Sale__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>