force-app/main/default/objects/Product_Sales_Budget__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Budget__c</columns>
    <columns>Sale_Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>